Add delete button to delete cuisines, add ConfirmDelete cshtml page.

--- a/Restaurants/Views/Cuisines/Create.cshtml
+++ b/Restaurants/Views/Cuisines/Create.cshtml
@@ -5,7 +5,7 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Restaurants</title>
+    <title>Cuisines</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <link href="~/css/styles.css" rel="stylesheet" type="text/css" />
 </head>
