--- a/Restaurants/Views/Cuisines/Index.cshtml
+++ b/Restaurants/Views/Cuisines/Index.cshtml
@@ -5,12 +5,12 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Restaurantst</title>
+    <title>Cuisines</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <link href="~/css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
-<h1>Restaurants</h1>
+<h1>Cuisines</h1>
 
 @if (@Model.Count == 0)
 {
