--- a/Restaurants/Views/Home/Index.cshtml
+++ b/Restaurants/Views/Home/Index.cshtml
@@ -11,6 +11,6 @@
 </head>
 
 
-<h1>Welcome to the To Do List!</h1>
+<h1>Welcome to the restaurant tracker!</h1>
 <p>@Html.ActionLink("See all cuisines", "Index", "Cuisines")</p>
 <p>@Html.ActionLink("See all restaurants", "Index", "Restaurants")</p>
