--- a/Restaurants/Views/Restaurants/Index.cshtml
+++ b/Restaurants/Views/Restaurants/Index.cshtml
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="container">
+        <h1> Your Saved Restaurants: </h1>
         @if (@Model.Count == 0)
         {
         <h3>No restaurants have been added yet!</h3>
@@ -19,7 +20,7 @@
         <ul>
             @foreach (Restaurant restaurant in Model)
             {
-              <li>@Html.ActionLink($"{restaurant.Name}", "Details", new { id = restaurant.Id }) </li>
+              <li>@Html.ActionLink($"{restaurant.Name}", "Details", new { id = restaurant.Id }) | @restaurant.Cuisine.Name  </li>
             }
         </ul>
 
